<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">minimap</string>
  <string name="gps_disabled">GPS is disabled in settings. Please enable it.</string>
  <string name="first_gps_fix">Got a fix on your current GPS position!</string>
  <!--Main menu strings -->
  <string name="main_menu">Welcome to multiplayer maps!</string>
  <string name="group_name">Group Name:</string>
  <string name="your_name">Your name:</string>
  <string name="join_group">Join Group!</string>
  <string name="settings_button">Advanced settings</string>


  <!-- Error messages from networker -->
  <string name="error_fields_empty">Error! You have not filled in all the fields!</string>
  <string name="failed_io_err">Connection failed. IO error.</string>
  <string name="failed_no_host">Connection failed. Unknown host.</string>
  <string name="failed_not_reachable">Connection failed. Host not reachable.</string>

  <!--Settings menu strings -->
  <string name="user_settings">User settings</string>
  <string name="user_name">Your alias</string>
    <string name="Icon_prompt">Choose a icon</string>
    <string-array name="Icon_array">
        <item>Medic</item>
        <item>Sniper</item>
        <item>Idiot</item>
        <item>Leader</item>
        <item>Edvin</item>
    </string-array>
  <string name="server_head">Server</string>
  <string name="view_head">View</string>
  <string name="server_adr">Server adress</string>
  <string name="view_users">View other users on map</string>
  <string name="view_status">View other users status</string>
  <string name="view_messges">Hide message box</string>
  <string name="Button2">Save</string>

  <!-- In-app messages -->
  <string name="user_connected">User with alias "%1$s" connected!</string>
  <string name="user_disconnected">User with alias "%1$s" has left.</string>
  <string name="your_message">Your message here..</string>
  <string name="message_send">Send</string>

  <!-- POI strings -->
  <string name="add_new_poi">Add new Point of Interest?</string>
  <string name="add_poi_msg">Purpose of this Point of Interest.</string>
  <string name="poi_radius">Radius: %1$d</string>
  <string name="make">Make</string>
  <string name="delete">Delete</string>
  <string name="exit">Exit</string>

</resources>


