<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

  <TextView
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/main_menu"
      android:id="@+id/textView"/>

  <EditText
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:hint="@string/group_name"
      android:id="@+id/group_name"/>
  <EditText
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:hint="@string/your_name"
      android:id="@+id/your_name"/>

  <Button
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/join_group"
      android:id="@+id/join_group"/>

</LinearLayout>
