<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

  <TextView
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/add_new_poi"/>

  <TextView
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:id="@+id/poi_radius_text"/>
  <SeekBar
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:max="100"
      android:progress="20"
      android:id="@+id/poi_radius_seeker"/>

  <EditText
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:hint="@string/add_poi_msg"
      android:id="@+id/add_poi_msg"/>

  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/make"
        android:id="@+id/make"
        android:layout_weight="1"/>
  </LinearLayout>

</LinearLayout>
